# dagui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  warnings.txt  withChildren.lua
data/tests/AttributeLayout/: testStride.lua
data/tests/Batcher/: ShapeMesh.lua  ShapeMeshSeparate.lua  TwoBins.lua
data/tests/CodeTemplate/: Light_vert.glsl  VertexShader.glsl
data/tests/Constraint/: Growth.lua
data/tests/ConstraintSolverVisitor/: NoConstraints.lua  Position.lua
data/tests/DrawCommandBuffer/: rectangle.lua
data/tests/DynamicMultiArray/: MultipleArrays.lua
data/tests/EditorRegistry/: std_editors.lua
data/tests/EventSystem/: Chord.lua  Click.lua  DoubleClick.lua  Hover.lua  Passthrough.lua
data/tests/Eventsystem/: Click.lua  ClickTooFarAway.lua  Passthrough.lua
data/tests/FontImageSource/: testEstimateCount.lua
data/tests/GenericAttributeArray/: testAddVertex.lua
data/tests/GenericMesh/: addIndex.lua  addVertex.lua
data/tests/GenericMesh2D/: testTakesOwnershipOfArrays.lua
data/tests/KeyCodeImporter/: Many.txt  One.txt
data/tests/LayerAttributes/: testSort.lua
data/tests/LayoutConstraintsCollectionVisitor/: NoConstraints.lua  OneConstraint.lua  Vertical.lua
data/tests/Mesh/: OneTriangle.lua  ShapeMesh.lua
data/tests/PatternMatching/: Label.lua  Patterns.lua  WindowWithLabel.lua  WindowWithNestedChildren.lua
data/tests/PropertyBag/: TestProperties.lua
doc/design/: Renderer.md
docs/design/: Atlas.dia  Editor.umlb  EventSystem.umlb  Mesh.umlb  Renderer.md  Widget.dia  dagui.umlb
docs/impl/: BrokenCloning.txt  BrokenToLua.lua
etc/: ShapeFactory.lua  ShapeMesh.lua  ShapeMeshSeparate.lua  defineShapeMesh.lua  fontImageSources.lua  keyCodes.lua  keyCodes.txt  setup.bat.in  setup.sh.in  setup_macos.sh.in
include/config/: Export.h  config.h.in  linux_config.h  macos_config.h  win32_config.h
include/core/: Atlas.h  Batcher.h  BinPackingStrategy.h  BinPackingStrategyFactory.h  Blending.h  BoolEditor.h  Border.h  Button.h  Circle.h  ClipGroup.h  CompositeShape.h  CompoundEditor.h  ConfigurationElement.h  Constraint.h  ConstraintSolverVisitor.h  Container.h  CreateVisualTreeVisitor.h  DataTemplate.h  DrawCommand.h  DrawCommandBuffer.h  Editable.h  Editor.h  EditorParameters.h  EditorRegistry.h  Event.h  EventFilterFactory.h  EventSystem.h  GraphicsBackendFactory.h  Group.h  Label.h  LayoutConstraintsCollectionVisitor.h  LayoutProperties.h  LuaInterface.h  MaxRectsBinPackingStrategy.h  Mesh.h  PositionStack.h  Rectangle.h  RenderBin.h  RenderBinKey.h  ResolveWidgetRefsVisitor.h  (+35 more)
include/gfx/: ArrayDescriptor.h  AttributeArray.h  AttributeDescriptor.h  AttributeLayout.h  BinImageDef.h  DrawingCommand.h  FontImageSource.h  GenericAttributeArray.h  GenericMesh.h  GenericMesh2D.h  GlyphImageDef.h  Image.h  ImageDef.h  ImageSource.h  IndexArray.h  Layer.h  Mesh2D.h  MeshBackend.h  OpaqueAttributeArray.h  OpaqueIndexArray.h  OpenGL.h  OpenGLBackendFactory.h  OpenGLBlending.h  OpenGLMesh.h  OpenGLMesh2D.h  OpenGLPositionStack.h  OpenGLRenderer.h  OpenGLTextureAtlas.h  PackingStrategy.h  Renderer.h  RendererFactory.h  ShelfPackingStrategy.h  TextureAtlas.h  TextureAtlasBackend.h
include/imgui/: BoolEditorImGui.h  EditorRegistryImGui.h
include/tui/: BoolEditorTUI.h  EditorRegistryTUI.h
include/util/: APIVersion.h  Completion.h  CompletionSubstring.h  CompletionTrie.h  ErrorHandler.h  Searchable.h  TrieNode.h  dbc.h  enums.h  errod.h  glmOutput.h
scripts/: KeyCodeConfig.py  KeyCodeConfigTest.py  KeyCodeImporter.py  KeyCodeImporterTest.py
src/: ConstraintSolverVisitor.cpp
src/ImGui/: BoolEditorImGui.cpp  EditorRegistryImGui.cpp
src/apps/BenchmarkDagui/: BenchmarkDagui.cpp  CMakeLists.txt
src/apps/BenchmarkNodeFrontend/: BenchmarkNodeFrontend.cpp  CMakeLists.txt
src/apps/DaguiTest/: CMakeLists.txt  DaguiTest.cpp  EditorTest.cpp  FakeBoolEditor.h  FakeEditorRegistry.cpp  FakeEditorRegistry.h  GraphicsTest.cpp  LayoutTest.cpp  MockGraphicsBackendFactory.h  PatternMatchingTest.cpp  RoundTripTest.cpp  SceneNodeTest.cpp  TestUtils.cpp  TestUtils.h  TuiTest.cpp  ValidationTest.cpp  VisualElementTest.cpp  WidgetTest.cpp
src/apps/NodeFrontendTest/: CMakeLists.txt  NodeFrontendTest.cpp
src/core/: Batcher.cpp  BinPackingStrategyFactory.cpp  BoolEditor.cpp  Border.cpp  Button.cpp  Circle.cpp  ClipGroup.cpp  CompositeShape.cpp  CompoundEditor.cpp  ConfigurationElement.cpp  Constraint.cpp  Container.cpp  CreateVisualTreeVisitor.cpp  DataTemplate.cpp  DrawCommandBuffer.cpp  Editor.cpp  EditorParameters.cpp  EditorRegistry.cpp  Event.cpp  EventFilterFactory.cpp  EventSystem.cpp  Group.cpp  Label.cpp  LayoutConstraintsCollectionVisitor.cpp  LayoutProperties.cpp  LuaInterface.cpp  MaxRectsBinPackingStrategy.cpp  PositionStack.cpp  Rectangle.cpp  RenderBin.cpp  RenderBinKey.cpp  ResolveWidgetRefsVisitor.cpp  RootWidget.cpp  SceneNode.cpp  SceneNodeFactory.cpp  SceneTemplate.cpp  Shape.cpp  ShapeFactory.cpp  ShapeVisitor.cpp  ShelfBinPackingStrategy.cpp  (+20 more)
src/demos/demoImGUI/: CMakeLists.txt  dagEditor.cpp  demoImGUI.cpp
src/demos/demoRenderer/: CMakeLists.txt  demoRenderer.cpp
src/demos/demoText/: CMakeLists.txt  demoText.cpp
src/demos/demoTurboVision/: CMakeLists.txt  demoTurboVision.cpp
src/gfx/: ArrayDescriptor.cpp  AttributeDescriptor.cpp  AttributeLayout.cpp  BinImageDef.cpp  DrawingCommand.cpp  FontImageSource.cpp  GenericMesh.cpp  GenericMesh2D.cpp  GlyphImageDef.cpp  Image.cpp  ImageDef.cpp  ImageSource.cpp  Layer.cpp  Mesh2D.cpp  OpaqueAttributeArray.cpp  OpaqueIndexArray.cpp  OpenGL.cpp  OpenGLBackendFactory.cpp  OpenGLBlending.cpp  OpenGLMesh.cpp  OpenGLMesh2D.cpp  OpenGLPositionStack.cpp  OpenGLRenderer.cpp  OpenGLTextureAtlas.cpp  PackingStrategy.cpp  RendererFactory.cpp  ShelfPackingStrategy.cpp  TextureAtlas.cpp  TextureAtlasBackend.cpp
src/imgui/: BoolEditorImGui.cpp  EditorRegistryImGui.cpp
src/infxml/: inf.i  inf_wrap.cxx  inf_wrap.xml
src/tui/: BoolEditorTUI.cpp  EditorRegistryTUI.cpp
src/util/: APIVersion.cpp  CompletionSubstring.cpp  CompletionTrie.cpp  ErrorHandler.cpp  errod.cpp  glmOutput.cpp
(+44 files in other folders)
