SET( BenchmarkNodeFrontend_SRC BenchmarkNodeFrontend.cpp )
ADD_EXECUTABLE( BenchmarkNodeFrontend ${BenchmarkNodeFrontend_SRC} )
TARGET_INCLUDE_DIRECTORIES( BenchmarkNodeFrontend PUBLIC ${CMAKE_SOURCE_DIR}/include ${PROJECT_BINARY_DIR}/include ${LUA_INCLUDE_DIR} ${OSGDB_INCLUDE_DIR} ${ANTLR_Reptol_OUTPUT_DIR})
SET( BenchmarkNodeFrontend_DEPS "nodefrontend;benchmark::benchmark;benchmark::benchmark_main" )
SET(BENCHMARK_LIBS ${benchmark_LIBRARY})
IF (WIN32)
    SET(BENCHMARK_LIBS ${BENCHMARK_LIBS} Shlwapi)
    target_compile_definitions(BenchmarkNodeFrontend PUBLIC BENCHMARK_STATIC_DEFINE)
ENDIF(WIN32)
TARGET_LINK_LIBRARIES( BenchmarkNodeFrontend ${BenchmarkNodeFrontend_DEPS}  nodefrontend ${LUA_LIBRARIES})
INSTALL(TARGETS BenchmarkNodeFrontend RUNTIME DESTINATION bin)
