SET( DaguiTest_SRC DaguiTest.cpp RoundTripTest.cpp )
ADD_EXECUTABLE( DaguiTest ${DaguiTest_SRC} )
SET( DaguiTest_DEPS "dagui;${GTEST_BOTH_LIBRARIES}" )
IF (UNIX)
LIST(APPEND LUA_LIBRARIES dl)
ENDIF(UNIX)
TARGET_LINK_LIBRARIES( DaguiTest PRIVATE dagbase ${LUA_LIBRARIES} Freetype::Freetype;dagui;GTest::gtest_main;GTest::gtest;GTest::gmock)
INSTALL(TARGETS DaguiTest RUNTIME DESTINATION bin)
SET_TARGET_PROPERTIES( DaguiTest PROPERTIES INSTALL_RPATH "${CMAKE_INSTALL_RPATH};${CMAKE_INSTALL_PREFIX}/lib" )
