ADD_EXECUTABLE(demoText demoText.cpp)
MESSAGE("Freetype includes:" ${FREETYPE_INCLUDE_DIRS})
MESSAGE(${CMAKE_SOURCE_DIR}/include;${PROJECT_BINARY_DIR}/include;${LUA_INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES(demoText PUBLIC ${CMAKE_SOURCE_DIR}/include;${PROJECT_BINARY_DIR}/include;${LUA_INCLUDE_DIR} /usr/include/freetype2)
TARGET_LINK_LIBRARIES(demoText PRIVATE GLUT::GLUT OpenGL::OpenGL OpenGL::GLU Freetype::Freetype)
INSTALL(TARGETS demoText DESTINATION bin)