ADD_EXECUTABLE(demoText demoText.cpp)
MESSAGE("Freetype includes:" ${FREETYPE_INCLUDE_DIRS})
MESSAGE(${CMAKE_SOURCE_DIR}/include;${PROJECT_BINARY_DIR}/include;${LUA_INCLUDE_DIR})
MESSAGE("OpenGL includes:" ${OPENGL_INCLUDE_DIR})
MESSAGE("GLUT includes:" ${GLUT_INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES(demoText PUBLIC ${CMAKE_SOURCE_DIR}/include;${PROJECT_BINARY_DIR}/include;${LUA_INCLUDE_DIR} ${FREETYPE_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR} ${GLUT_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(demoText PRIVATE nodefrontend GLUT::GLUT OpenGL::GL OpenGL::GLU Freetype::Freetype)
INSTALL(TARGETS demoText DESTINATION bin)
